# acneBayesModel

./: .dockerignore  .gitignore  .gitignore.txt  Dockerfile  Quantifying Acne Severity Dynamics - A Bayesian and KL Divergence Framework.ipynb  README.md  bhm_model_config.json  initial_constants.json  model_equations.md  model_params_check.json  pyproject.toml  run_notebook.sh  segment_regression_results.csv  shiny_model.R
.ipynb_checkpoints/: Quantifying Acne Severity Dynamics - A Bayesian and KL Divergence Framework-checkpoint.ipynb  initial_constants-checkpoint.json  model_equations-checkpoint.md
JS App/: primary_page.py  sim_acne.csv
acne_model/: raw_data_analysis.py
app/: initial_constants.json  newfile.txt  primary_page.py  requirments.txt  sim_acne_amended.csv  sim_acne_diet.csv  synthetic_data_concat.py  synthetic_data_gen.py
local_model_run/: model_params.json  run_model.sh  sim_acne_diet.csv  treatment_params.json
notebooks/: Current.ipynb  QASDHBB.ipynb  Quantifying Acne Severity Dynamics - A Bayesian and KL Divergence Framework.ipynb  Quantifying Acne Severity Dynamics - A Hierarchical Bayesian Approach.ipynb  bhm_model_config.json  initial_constants.json  segment_regression_results.csv  sim_acne_amended_v2.csv
src/acne_model/: __init__.py  data_viz.py  model.py  model_data_driven.py  model_script.py  other_model_script.py  raw_data_analysis.py  unused.py
