[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "acne-model"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "statsmodels",
    "scikit-learn",
    "filterpy",
    "numdifftools"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["acne_model"]


